--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,38 +8,44 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".App"
         android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:fullBackupContent="false"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".ImagePreview">
+        </activity>
 
         <provider
-            android:authorities="com.leagueofshadows.enc.fileProvider"
             android:name="androidx.core.content.FileProvider"
+            android:authorities="com.leagueofshadows.enc.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
-
+                android:resource="@xml/file_paths" />
         </provider>
 
-        <uses-library android:name="org.apache.http.legacy" android:required="false" />
-        <activity android:name=".ContactsActivity"
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
+        <activity
+            android:name=".ContactsActivity"
             android:parentActivityName=".MainActivity">
         </activity>
-        <activity android:name=".ChatActivity"
-            android:windowSoftInputMode="adjustResize"
-            android:parentActivityName=".MainActivity">
+        <activity
+            android:name=".ChatActivity"
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity
             android:name=".MainActivity"
@@ -55,18 +61,21 @@
         <activity
             android:name=".Register"
             android:theme="@style/UserTheme" />
-        <activity android:name=".Test"
+        <activity
+            android:name=".Test"
             android:windowSoftInputMode="adjustPan">
+        </activity>
+        <activity
+            android:name=".MessageInfo"
+            android:parentActivityName=".ChatActivity" />
+        <activity
+            android:name=".SplashActivity"
+            android:theme="@style/UserTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".MessageInfo"
-            android:parentActivityName=".ChatActivity"/>
-
-        <activity android:name=".SplashActivity"
-            android:theme="@style/UserTheme" >
         </activity>
 
         <service
@@ -90,12 +99,16 @@
             android:enabled="true"
             android:exported="false" />
         <service
+            android:name=".FileUploadService"
+            android:enabled="true"
+            android:exported="false" />
+        <service
             android:name=".FirebaseReceiver"
-            android:exported="true"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firbase.INSTANCE_ID_EVENT" />
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
