--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ShareActivity"></activity>
+        <activity android:name=".ShareActivity">
+        </activity>
         <activity android:name=".GroupChatActivity" />
         <activity android:name=".CreateGroupActivity" />
         <activity
@@ -80,9 +81,7 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
@@ -93,14 +92,10 @@
             android:name=".Test"
             android:windowSoftInputMode="adjustPan" />
         <activity
-            android:name=".MessageInfo"
-            android:parentActivityName=".ChatActivity" />
-        <activity
             android:name=".SplashActivity"
             android:theme="@style/UserTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -122,10 +117,6 @@
             android:enabled="true"
             android:exported="false" />
         <service
-            android:name=".BackgroundWorker"
-            android:enabled="true"
-            android:exported="false" />
-        <service
             android:name=".FileUploadService"
             android:enabled="true"
             android:exported="false" />
@@ -133,6 +124,10 @@
             android:name=".Downloader"
             android:enabled="true"
             android:exported="false" />
+        <service android:name=".BackgroundService"
+            android:enabled="true"
+            android:exported="false"/>
+
         <service
             android:name=".FirebaseReceiver"
             android:enabled="true"
