--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,24 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Test">
+        </activity>
 
-        <activity android:name=".GroupInfo" />
-        <activity android:name=".GroupMessageInfo" />
+        <service
+            android:name=".Background.MessageStatusWorker"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity android:name=".GroupInfo"
+            android:parentActivityName=".GroupChatActivity"/>
+        <activity android:name=".GroupMessageInfo"
+            android:parentActivityName=".GroupChatActivity"/>
         <activity
             android:name=".ShareActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".GroupChatActivity"
+            android:launchMode="singleTask"
             android:parentActivityName=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
@@ -57,6 +67,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".ChatActivity"
+            android:launchMode="singleTask"
             android:parentActivityName=".MainActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
@@ -122,7 +133,7 @@
             android:enabled="true"
             android:exported="false" />
         <service
-            android:name=".Background.FileUploadService"
+            android:name=".Background.FileUploadWorker"
             android:enabled="true"
             android:exported="false" />
         <service
@@ -146,6 +157,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <receiver
             android:name=".BootReceiver"
             android:enabled="true"
